Finished Utility Bills, Recurrent Payments, Fix register, transactions

--- a/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
+++ b/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
@@ -68,7 +68,7 @@
   </div>
 
   <div class="row mt-4">
-    <div class="col-12 col-sm-4 mb-3">
+    <div class="col-12 col-sm-6 mb-3">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
               <span class="font-weight-bold card-mb-header">Transaction</span>
@@ -80,7 +80,7 @@
           </div>
         </div>
     </div>
-    <div class="col-12 col-sm-4 mb-3">
+    <div class="col-12 col-sm-6 mb-3">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
               <span class="font-weight-bold card-mb-header">Transactions Report</span>
@@ -92,11 +92,13 @@
           </div>
         </div>
     </div>
+  </div>
+  <!-- <div class="row">
     <div class="col-12 col-sm-4 mb-3">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
               <span class="font-weight-bold card-mb-header">Apply for Credit Card</span>
-              <i class="fa fa-credit-card mb-color card-mb-icon"></i>
+              <i class="fa fa-globe mb-color card-mb-icon"></i>
           </div>
           <div class="card-body text-center">
             <h5 class="card-title">Apply for a Credit Card and send the appliance to an Operator</h5>
@@ -104,43 +106,17 @@
           </div>
         </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-12 col-sm-4 mb-3">
-      <div class="card">
-          <div class="card-header d-flex justify-content-between">
-              <span class="font-weight-bold card-mb-header">Plan Payments</span>
-              <i class="fa fa-money mb-color card-mb-icon"></i>
-          </div>
-          <div class="card-body text-center">
-            <h5 class="card-title">Plan A Recurrent Payment</h5>
-            <a class="btn mb-button" routerLink="">Select</a>
-          </div>
-        </div>
-    </div>
-    <div class="col-12 col-sm-4 mb-3">
-      <div class="card">
-          <div class="card-header d-flex justify-content-between">
-            <span class="font-weight-bold card-mb-header">Pay Bills</span>
-            <i class="fa fa-money mb-color card-mb-icon"></i>
-          </div>
-          <div class="card-body text-center">
-            <h5 class="card-title">Pay your Utility Bill</h5>
-            <a class="btn mb-button" routerLink="">Select</a>
-          </div>
-      </div>
-    </div>
     <div class="col-12 col-sm-4 mb-3">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
               <span class="font-weight-bold card-mb-header">Exchange Currency</span>
-              <i class="fa fa-credit-card mb-color card-mb-icon"></i>
+              <i class="fa fa-exchange mb-color card-mb-icon"></i>
           </div>
           <div class="card-body text-center">
-            <h5 class="card-title">Exchange to a different currency</h5>
+            <h5 class="card-title">Exchange your money to a different currency</h5>
             <a class="btn mb-button" routerLink="/">Select</a>
           </div>
         </div>
     </div>
-  </div>
+  </div> -->
 </div>
