--- a/Money-Bunny/src/app/bank-select/bank-select.component.html
+++ b/Money-Bunny/src/app/bank-select/bank-select.component.html
@@ -91,7 +91,7 @@
 			<span>
 				<label class="text-dark text-decoration-none font-weight-bold">Email: </label>
 				<input type="email" id="email" name="email" #email="ngModel" class="form-control p-3 input-style"
-					placeholder="{{user.email}}" [(ngModel)]="account.email" pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" required>
+					placeholder="{{user.email}}" [(ngModel)]="account.email" pattern="^[\w\.-]+@([\w-]+\.)+[\w-]{2,4}$" required>
 				<a class="text font-error" *ngIf="email.errors?.pattern">Not a valid email address!</a>
 			</span>
 			<span>
