Finished Currency Exchange

--- a/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
+++ b/Money-Bunny/src/app/account-dashboard/account-dashboard.component.html
@@ -93,8 +93,8 @@
         </div>
     </div>
   </div>
-  <!-- <div class="row">
-    <div class="col-12 col-sm-4 mb-3">
+  <div class="row">
+    <div class="col-12 col-sm-6 mb-3">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
               <span class="font-weight-bold card-mb-header">Apply for Credit Card</span>
@@ -106,17 +106,17 @@
           </div>
         </div>
     </div>
-    <div class="col-12 col-sm-4 mb-3">
+    <div class="col-12 col-sm-6 mb-3">
       <div class="card">
           <div class="card-header d-flex justify-content-between">
-              <span class="font-weight-bold card-mb-header">Exchange Currency</span>
+              <span class="font-weight-bold card-mb-header">Convert Currency</span>
               <i class="fa fa-exchange mb-color card-mb-icon"></i>
           </div>
           <div class="card-body text-center">
-            <h5 class="card-title">Exchange your money to a different currency</h5>
-            <a class="btn mb-button" routerLink="/">Select</a>
+            <h5 class="card-title">Convert money into a different currency before doing a transaction</h5>
+            <a class="btn mb-button" routerLink="/currency-conversion">Select</a>
           </div>
         </div>
     </div>
-  </div> -->
+  </div>
 </div>
