--- a/Money-Bunny/src/app/card-select/card-select.component.html
+++ b/Money-Bunny/src/app/card-select/card-select.component.html
@@ -77,9 +77,12 @@
       </div>
     </div>
   </div>
-  <div class="row mt-3">
-    <div class="col-12 col-sm-12 d-flex justify-content-center">
+  <div class="row">
+    <div class="col-12 col-sm-6 d-flex justify-content-center">
       <a class="btn mb-button" routerLink="/bank-select">Open new bank account</a>
+    </div>
+    <div class="col-12 col-sm-6 d-flex justify-content-center">
+      <a class="btn mb-button" routerLink="/add-card">Add existing account</a>
     </div>
     <br><br>
   </div>
