--- a/Money-Bunny/src/app/card-select/card-select.component.html
+++ b/Money-Bunny/src/app/card-select/card-select.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container my-3">
   <div class="row justify-content-center">
       <h1 class="mb-color font-weight-bold">Your registered accounts</h1>
   </div>
@@ -77,13 +77,12 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-12 col-sm-6 d-flex justify-content-center">
+  <div class="row mt-4">
+    <div class="col-12 col-sm-6 d-flex justify-content-end">
       <a class="btn mb-button" routerLink="/bank-select">Open new bank account</a>
     </div>
-    <div class="col-12 col-sm-6 d-flex justify-content-center">
+    <div class="col-12 col-sm-6">
       <a class="btn mb-button" routerLink="/add-card">Add existing account</a>
     </div>
-    <br><br>
   </div>
 </div>
