--- a/Money-Bunny/src/app/logged-in-menu/logged-in-menu.component.html
+++ b/Money-Bunny/src/app/logged-in-menu/logged-in-menu.component.html
@@ -6,7 +6,7 @@
 	</div> 
 	<div class="row justify-content-center">
 		<div class="counter-container col-md-12 col-lg-4">
-			<div class="row text-center mx-3">
+			<div class="row text-center mx-3 justify-content-center">
 				<div class="col-6 col-sm my-3">
 					<span class="btn mb-button" routerLink="/card-select"><a class="bi bi-credit-card-2-front mb-color icon mb-3"></a><br>
 						Select registered bank account</span>
