--- a/Money-Bunny/src/app/add-card/add-card.component.html
+++ b/Money-Bunny/src/app/add-card/add-card.component.html
@@ -16,7 +16,7 @@
 			<div class="form-outline mb-4">
 				<input type="text" pattern="RO[0-9]{2}[A-Z]{4}[0-9A-Z]{16}" class="form-control p-3 input-style"
 					placeholder="IBAN"
-					name="iban" #iban="ngModel" [(ngModel)]="iban" required>
+					name="iban" #iban="ngModel" (ngModel)="iban" [ngModel]="iban" required>
 				<a class="text font-error" *ngIf="iban.errors?.pattern">Not a valid Romanian IBAN!</a>
 			</div>
         </div>
@@ -24,7 +24,7 @@
 			<div class="form-outline mb-4">
 				<input type="text" pattern="[0-9]{4}$" class="form-control p-3 input-style"
 					placeholder="PIN"
-					name="pin" #pin="ngModel" [(ngModel)]="pin" required>
+					name="pin" #pin="ngModel" [ngModel]="pin" (ngModel)="pin" required>
 				<a class="text font-error" *ngIf="pin.errors?.pattern">Not a valid PIN!</a>
 			</div>
         </div>
@@ -32,7 +32,7 @@
 			<div class="form-outline mb-4">
 				<input type="text" class="form-control p-3 input-style"
 					placeholder="Nickname"
-					name="account_name" #account_name="ngModel" [(ngModel)]="account_name" required>
+					name="account_name" #account_name="ngModel" (ngModel)="account_name" [ngModel]="account_name" required>
 					<a class="text font-error" *ngIf="nicknameInUse() && (invalidNickname!=='')">Account nickname already in use!</a>
 			</div>
         </div>
