--- a/Money-Bunny/src/app/add-card/add-card.component.html
+++ b/Money-Bunny/src/app/add-card/add-card.component.html
@@ -1,5 +1,5 @@
 <div class="container d-flex justify-content-center mt-4">
-    <form>
+    <!--<form>
         <div class="row mb-3">
             <div class="col-12 col-sm-12 justify-content-center d-flex">
                 <h4 class="font-weight-bold">Money Bunny Account Credentials</h4>
@@ -40,5 +40,5 @@
         <div class="row justify-content-center">
             <button type="submit" class="btn mb-2 input-style mb-button w-50" (click)="submitRequest()">Submit</button>
         </div>
-    </form>
+    </form>-->
 </div>
