--- a/Money-Bunny/src/app/operator-menu/operator-menu.component.html
+++ b/Money-Bunny/src/app/operator-menu/operator-menu.component.html
@@ -30,7 +30,7 @@
 					<h4 class="font-weight-bold mb-form-field">In Coin:&nbsp;</h4>
 					<h4 class="font-weight-bold">{{request['coin'].toUpperCase()}}</h4>
 				</div>
-	
+
 				<br>
 				<div class="row" *ngIf="request['fromUserType'] === 'pjuridica'">
 					<h4 class="font-weight-bold mb-form-field">For Company:&nbsp;</h4>
@@ -120,6 +120,31 @@
 				<div class="row">
 					<h4 class="font-weight-bold mb-form-field">For Account with IBAN:&nbsp;</h4>
 					<h4 class="font-weight-bold">{{request['iban']}}</h4>
+				</div>
+			</div>
+
+			<div *ngIf="addAccount">
+				<div class="row">
+					<input type="text" pattern="RO[0-9]{2}[A-Z]{4}[0-9A-Z]{16}" class="form-control p-3 input-style"
+						placeholder="IBAN"
+						name="iban" #iban="ngModel" [(ngModel)]="newAccount.iban" required>
+					<a class="text font-error" *ngIf="iban.errors?.pattern">Not a valid Romanian IBAN!</a>
+				</div>
+				<div class="row">
+					<input type="text" pattern="[0-9]{4}$" class="form-control p-3 input-style"
+						placeholder="PIN"
+						name="pin" #pin="ngModel" [(ngModel)]="newAccount.pin" required>
+					<a class="text font-error" *ngIf="pin.errors?.pattern">Not a valid PIN!</a>
+				</div>
+				<div class="row">
+					<input type="number" class="form-control p-3 input-style"
+						placeholder="Sold"
+						name="sold" #sold="ngModel" [(ngModel)]="newAccount.sold" required>
+				</div>
+				<div class="row mt-2">
+					<div class="col-12 col-sm-12 d-flex justify-content-center">
+						<a class="btn mb-button" (click)="this.createAccount(request)">Submit</a>
+					</div>
 				</div>
 			</div>
 
