--- a/Money-Bunny/src/app/bank-select/bank-select.component.html
+++ b/Money-Bunny/src/app/bank-select/bank-select.component.html
@@ -1,170 +1,42 @@
-<div class="container d-flex justify-content-center mt-5 pt-5">
-	<div class="row">
-		<a class="text-dark text-decoration-none font-weight-bold">Select a partner bank!</a>
-		<select (input)="setBank($event)" class="form-control input-style mb-3" placeholder="Bank" id="bank" required>
-			<option value="" disabled selected>Select bank</option>
-			<option value="BT">Banca Transilvania</option>
-			<option value="BRD">BRD</option>
-			<option value="LB">Libra Bank</option>
-		</select>
-		<form *ngIf='user && account && account.bank !== ""'>
-			<div class="form-group">
-				<div class="form-outline mb-4">
-					<select (input)="setAccount($event)" class="form-control input-style" placeholder="Account Type" id="type" required>
-						<option value="" disabled selected>Account Type</option>
-						<option value="checking">Checking</option><!--cont curent-->
-						<option value="savings">Savings</option><!--cont de economii-->
-						<option value="certificate of deposit">Certificate of deposit</option><!--depozit-->
-						<option value="credit">Credit</option><!--credit-->
-					</select>
-					<br>
-					<select (input)="setCurrency($event)" class="form-control input-style" placeholder="Currency" id="currency" required>
-						<option value="" disabled selected>Currency</option>
+<div class="container mt-5">
+	<form (ngSubmit)="submit()" *ngIf="this.account">
+		<div class="row justify-content-center">
+			<div class="col-12 col-sm-6">
+				<div class="form-group">
+					<label for="banks" class="font-weight-bold mb-color h5">Select a Partner Bank</label>
+					<select name="banks" [(ngModel)]="this.account.bank" id="banks" class="form-control input-style" required>
+                        <option *ngFor="let item of this.banks" [ngValue]="item.name">{{item.name}}</option>
+                    </select>
+				</div>
+			</div>
+		</div>
+		<div class="row justify-content-center">
+			<div class="col-12 col-sm-6">
+				<div class="form-group">
+					<select name="account_type" [(ngModel)]="this.account.type" id="account_type" class="form-control input-style" required>
+                        <option value="" disabled selected>Account Type</option>
+						<option value="checking">Checking</option>
+						<option value="savings">Savings</option>
+						<option value="certificate of deposit">Certificate of deposit</option>
+						<option value="credit">Credit</option>
+                    </select>
+				</div>
+			</div>
+		</div>
+		<div class="row justify-content-center">
+			<div class="col-12 col-sm-6">
+				<div class="form-group">
+					<select name="currency" [(ngModel)]="this.account.coin" id="currency" class="form-control input-style" required>
+                        <option value="" disabled selected>Currency</option>
 						<option value="RON">Lei</option>
 						<option value="EUR">Euro</option>
 						<option value="USD">USD</option>
-					</select>
+                    </select>
 				</div>
 			</div>
-			<hr>
-
-			<div class="form-group" *ngIf='user.userType === "pfizica"'>
-				<div>
-					<label class="text-dark text-decoration-none font-weight-bold">Surname </label>
-					<input type="text" name="surname" id="surname" #surname="ngModel" class="form-control p-3 input-style" placeholder="Surname"
-						[(ngModel)]="account.surname" required><br>
-					<label class="text-dark text-decoration-none font-weight-bold">Firstname </label>
-					<input type="text" name="firstname" id="firstname" #firstname="ngModel" class="form-control p-3 input-style" placeholder="Firstname"
-						[(ngModel)]="account.name" required><br>
-				</div>
-				<div>
-					<label class="text-dark text-decoration-none font-weight-bold">Birthdate </label>
-					<input type="date" class="form-control p-3 input-style" placeholder="{{user.birthday}}"
-						name="birthday" id="birthday" #birthday="ngModel" [(ngModel)]="account.birthday" required>
-				</div>
-				<br>
-				<div>
-					<label class="text-dark text-decoration-none font-weight-bold">Nationality </label>
-					<input type="text" id="nationality" name="nationality" #nationality="ngModel" class="form-control p-3 input-style"
-						placeholder="Romanian" [(ngModel)]="account.nationality" required>
-				</div>
-			</div>
-
-			<div class="form-group" *ngIf='user.userType === "pjuridica"' #formjur>
-				<div>
-					<label class="text-dark text-decoration-none font-weight-bold">Company Name </label>
-					<!--<input type="text" id="companyName" class="form-control p-3 input-style" placeholder="Denumirea societății" required><br><br>-->
-					<input type="text" name="companyName" id="companyName" #companyName="ngModel" class="form-control p-3 input-style" placeholder="user.companyName"
-						[(ngModel)]="account.name" required><br>
-				</div>
-				<div>
-					<label class="text-dark text-decoration-none font-weight-bold">Organisation Type </label>
-					<!--<input type="text" id="type" class="form-control p-3 input-style" placeholder="Forma de organizare" required>-->
-					<input type="text" name="organizationType" id="organizationType" #organizationType="ngModel" class="form-control p-3 input-style" placeholder="Organisation Type"
-						[(ngModel)]="account.organizationType" required><br>
-					</div>
-				<div>
-					<label class="text-dark text-decoration-none font-weight-bold">Unique Registration Code / Fiscal Registration Code </label>
-					<!--<input type="text" id="code" class="form-control p-3 input-style" placeholder="Cod Unic de Inregistrare/ Cod de inregistrare fiscala" required>-->
-					<input type="text" name="code" id="code" #code="ngModel" class="form-control p-3 input-style" placeholder="CIF / CUI"
-						[(ngModel)]="account.cui" pattern="(RO)?[0-9]{10}" required>
-					<a class="text font-error" *ngIf="code.errors?.pattern">Not a valid fiscal registration code!</a><br>
-				</div>
-				<div>
-					<label class="text-dark text-decoration-none font-weight-bold">Nationality </label>
-					<input type="text" id="nationality" name="nationality" #nationality="ngModel" class="form-control p-3 input-style"
-						placeholder="Romanian" [(ngModel)]="account.nationality" required>
-				</div>
-
-				<div>
-					<hr>
-					<label class="font-1p3rem">Registration Certificate</label><!--Certificat de inregistrare la Registrul Comertului-->
-					<br>
-					<span>
-						<label class="text-dark text-decoration-none font-weight-bold">Commerce Register Number </label>
-						<input type="text" name="certificateNumber" id="certificateNumber" #certificateNumber="ngModel"
-							class="form-control p-3 input-style" placeholder="Number format [JCF]nn/mmmmmm/aaaa"
-							[(ngModel)]="account.certificateNumber" pattern="[JCF][0-9]{2}/[0-9]{6}/[0-9]{4}" required><br>
-						<a class="text font-error" *ngIf="certificateNumber.errors?.pattern">Not a valid comerce register number! Respect the [JCF]nn/mmmmmm/aaaa format!</a>
-					</span>
-
-					<label class="text-dark text-decoration-none font-weight-bold">Registration Date </label>
-					<input type="date" class="form-control p-3 input-style" placeholder="DD/MM/YYYY - Registration Date"
-						name="registerDate" id="registerDate" #registerDate="ngModel" [(ngModel)]="account.registerDate" required>
-				</div>
-				<br>
-
-				<hr>
-				<label class="font-1p3rem">Representative</label>
-				<div>
-					<label class="text-dark text-decoration-none font-weight-bold">Surname </label>
-					<input type="text" name="surname" id="surname" #surname="ngModel" class="form-control p-3 input-style" placeholder="Surname"
-						[(ngModel)]="account.representativeSurname" required>
-
-					<label class="text-dark text-decoration-none font-weight-bold">Firstname </label>
-					<input type="text" name="firstname" id="firstname" #firstname="ngModel" class="form-control p-3 input-style" placeholder="Firstname"
-						[(ngModel)]="account.representativeName" required><br>
-				</div>
-			</div>
-			<br>
-
-			<div>
-				<label class="text-dark text-decoration-none font-weight-bold">ID</label>
-			</div>
-			<div class="row justify-content-between">
-				<div class="col-xs-4">
-					<div class="form-outline mb-4">
-						<label class="text-dark text-decoration-none">Personal Numeric Code </label>
-						<input type="text" pattern="[1-8][0-9]{12}" class="form-control p-3 input-style" placeholder="{{user.cnp}}"
-							name="cnp" id="cnp" #cnp="ngModel" [(ngModel)]="account.cnp" required>
-						<a class="text font-error" *ngIf="cnp.errors?.pattern">Not a valid CNP!</a>
-					</div>
-				</div>
-				<div class="col-xs-4">
-					<div class="form-outline mb-4">
-						<label class="text-dark text-decoration-none">ID Series </label>
-						<input type="text" name="id_series" id="id_series"  #id_series="ngModel"
-							pattern="[A-Z]{2}" class="form-control p-3 input-style" placeholder="Series"
-							[(ngModel)]="account.idSeries" required>
-						<a class="text font-error" *ngIf="id_series.errors?.pattern">Not a valid ID series! Make sure you used all caps!</a>
-					</div>
-				</div>
-				<div class="col-xs-4">
-					<div class="form-outline mb-4">
-						<label class="text-dark text-decoration-none">ID Number </label>
-						<input type="text" name="id_nr" id="id_nr" #id_nr="ngModel"
-							pattern="[0-9]{6}" class="form-control p-3 input-style" placeholder="Number"
-							[(ngModel)]="account.idNumber" required>
-						<a class="text font-error" *ngIf="id_nr.errors?.pattern">Not a valid ID number!</a>
-					</div>
-				</div>
-			</div>
-
-			<hr>
-			<div>
-				<label class="text-dark text-decoration-none font-weight-bold">Email: </label>
-				<input type="email" id="email" name="email" #email="ngModel" class="form-control p-3 input-style"
-					placeholder="{{user.email}}" [(ngModel)]="account.email" pattern="^[\w\.-]+@([\w-]+\.)+[\w-]{2,4}$" required>
-				<a class="text font-error" *ngIf="email.errors?.pattern">Not a valid email address!</a>
-			</div>
-			<div>
-				<label class="text-dark text-decoration-none font-weight-bold">Phone Number: </label>
-				<input type="text" pattern="0[72][24-8][0-9]{7}" class="form-control p-3 input-style" placeholder="{{user.phone}}"
-					name="phone" id="phone" #phone="ngModel" [(ngModel)]="account.phone" required>
-				<a class="text font-error" *ngIf="phone.errors?.pattern">Not a valid Romanian phone number!<br>
-					Insert without international prefix, spaces or special characters!</a>
-			</div>
-			<div>
-				<label class="text-dark text-decoration-none font-weight-bold">Address: </label>
-				<input type="text" id="address" name="adress" #adress="ngModel" class="form-control p-3 input-style"
-					placeholder="{{user.address}}" [(ngModel)]="account.address" required>
-			</div>
-			<br><div class="row mt-2">
-				<div class="col-12 col-sm-12 d-flex justify-content-center">
-					<button type="submit" class="btn btn-primary" (click)="submit()">Submit</button><br><br>
-				</div>
-			</div>
-			<br><br>
-		</form>
-	</div>
+		</div>
+		<div class="row justify-content-center">
+            <button type="submit" class="btn mb-2 input-style mb-button w-50" [disabled]="this.account.coin == '' || this.account.bank == '' || this.account.type == ''" >Submit</button>
+        </div>
+	</form>
 </div>
